JumpScript/tests/baselines/reference/asyncImportedPromise_es6.errors.txt
tests/cases/conformance/async/es6/test.jump(3,25): error TS1064: The return type of an async function or method must be the global Promise<T> type.


==== tests/cases/conformance/async/es6/task.jump (0 errors) ====
    export class Task<T> extends Promise<T> { }
    
==== tests/cases/conformance/async/es6/test.jump (1 errors) ====
    import { Task } from "./task";
    class Test {
        async example<T>(): Task<T> { return; }
                            ~~~~~~~
!!! error TS1064: The return type of an async function or method must be the global Promise<T> type.
    }